[package]
name = "tinitime"
version = "0.1.1"
edition = "2021"

[build-dependencies]
embed-resource = "3.0"

[profile.release]
opt-level = 'z'   # Optimize for size
lto = true        # Enable link-time optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations
panic = 'abort'   # Abort on panic
strip = true      # Strip symbols from binary*

[dependencies.windows]
version = "0.59.0"
features = [
    "Graphics",
    "System",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Console",
]
